--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
   </head>
   <body>
     <h1> <strong>Diogo Alpino Costa</strong></h1>
+    <img id = "fotoDePerfil" src="/Profile.jpg" alt="Foto atual de perfil" width="300px"> 
 
 
 
