--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
   <body>
     <h1> <strong>Diogo Alpino Costa</strong></h1>
     <img id = "fotoDePerfil" src="/Profile.jpg" alt="Foto atual de perfil" width="300px"> 
+    <h2 id="dadosGerais"> <em>27 anos <br> Brasileiro <br> Belo Horizonte/MG</em></h2>
+    <p id="sobreMim"><em>Formado em Engenharia Mecânica pela PUC Minas <br> Estudante de Desenvolvimento WEB na Trybe <br> </em></p>
 
 
 
