--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,19 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
     <img id = "fotoDePerfil" src="/Profile.jpg" alt="Foto atual de perfil" width="300px"> 
     <h2 id="dadosGerais"> <em>27 anos <br> Brasileiro <br> Belo Horizonte/MG</em></h2>
     <p id="sobreMim"><em>Formado em Engenharia Mecânica pela PUC Minas <br> Estudante de Desenvolvimento WEB na Trybe <br> </em></p>
+    <h3 id="habilidades">Habilidades que mais me orgulho</h3>
+    <ul>
+        <li>Resiliência</li>
+        <li>Resolução de conflitos</li>
+        <li>Inglês avançado</li>
+    </ul>
+    <h3>Outras habilidades</h3>
+    <ul>
+        <li>Pacote Office</li>
+        <li>Gestão de indicadores</li>
+        <li>Análise de dados</li>
+    
+    </ul>
 
 
 
