--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,7 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
         <li>Análise de dados</li>
     
     </ul>
-
-
-
-
-
-
+    <p><a href="#fotoDePerfil">Foto de Perfil</a></p>
 
 
 
