--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,7 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
     
     </ul>
     <p><a href="#fotoDePerfil">Foto de Perfil</a></p>
-
-
+    <h3 id="sitePreferido"><a target="_blank" href="https://ge.globo.com/futebol/times/cruzeiro/">Meu site preferido</a></h3>  
 
 </body>
 </html>
