--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,14 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
   </head>
   <body>
     <h1> <strong>Diogo Alpino Costa</strong></h1>
-    <img id = "fotoDePerfil" src="/Profile.jpg" alt="Foto atual de perfil" width="300px"> 
+    <img id = "fotoDePerfil" src="/Profile.jpg" alt="Foto atual de perfil" width="300px">
+    <h2>Indice</h2>
+    <ol>
+        <li><a href="#dadosGerais">Dados Gerais<a></li>
+        <li><a href="#sobreMim">Sobre mim<a></li>
+        <li><a href="#habilidades">Habilidades<a></li>
+        <li><a href="#sitePreferido">Meu site preferido<a></li>
+    </ol> 
     <h2 id="dadosGerais"> <em>27 anos <br> Brasileiro <br> Belo Horizonte/MG</em></h2>
     <p id="sobreMim"><em>Formado em Engenharia Mecânica pela PUC Minas <br> Estudante de Desenvolvimento WEB na Trybe <br> </em></p>
     <h3 id="habilidades">Habilidades que mais me orgulho</h3>
