Estilizando portfolio dia 3.2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title>Diogo Alpino Costa</title>
+    <style>
+      
+      body {
+        background-color: rgb(111,138,246);
+      }
+      h1 {
+        font-family: Georgia, 'Times New Roman', Times, sans-serif;
+      }
+
+      #dadosGerais {
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        text-decoration: underline;
+      }
+
+      .resiliencia {
+        font-size:2em;
+      }
+
+      .resConf {
+        font-size:3em;
+      }
+
+      .ingles {
+        font-size:40px;
+      }
+
+
+    </style>
   </head>
   <body>
     <h1> <strong>Diogo Alpino Costa</strong></h1>
@@ -28,9 +57,9 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
     <p id="sobreMim"><em>Formado em Engenharia Mecânica pela PUC Minas <br> Estudante de Desenvolvimento WEB na Trybe <br> </em></p>
     <h3 id="habilidades">Habilidades que mais me orgulho</h3>
     <ul>
-        <li>Resiliência</li>
-        <li>Resolução de conflitos</li>
-        <li>Inglês avançado</li>
+        <li class="resiliencia">Resiliência</li>
+        <li class="resConf">Resolução de conflitos</li>
+        <li class="ingles">Inglês avançado</li>
     </ul>
     <h3>Outras habilidades</h3>
     <ul>
