Ajustando tamanhos no indice

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
         font-size:40px;
       }
 
+      h2, ol {
+        line-height: 50px;
+      }
+
+      ol {
+        font-size: 2em;
+      }
+
 
     </style>
   </head>
@@ -69,7 +77,7 @@ Um índice com links internos para as diferentes seções do seu portfólio. -->
     
     </ul>
     <p><a href="#fotoDePerfil">Foto de Perfil</a></p>
-    <h3 id="sitePreferido"><a target="_blank" href="https://ge.globo.com/futebol/times/cruzeiro/">Meu site preferido</a></h3>  
+    <h3 id="sitePreferido"><a target="_blank" href="https://ge.globo.com/futebol/times/cruzeiro/">Acesse meu site preferido xD</a></h3>  
 
 </body>
 </html>
